# Help_me_see_in_rain

./: .gitignore  README.md  active_learning.py  pyproject.toml  requirements.txt  setup.bat  setup.sh  train.py  utils.py
docker/: Dockerfile.cpu
hitl/: app.py
scripts/: generate_rain.py  make_rainy_dataset.py  prepare_gtsrb.py
src/: config.py
src/hitl/: annotation_store.py
src/training/: train.py
teach_me_rain/docker/: Dockerfile.gpu
teach_me_rain/scripts/: plot_class_distribution.py  prepare_dummy_data.py  prepare_gtsrb.py
teach_me_rain/src/data/: class_stats.py  gtsrb_dataset.py  rain_augmentation.py
teach_me_rain/src/experiments/: run_active_loop.py  run_baseline.py
teach_me_rain/src/hitl/: streamlit_app.py
teach_me_rain/src/models/: resnet_model.py  utils.py
teach_me_rain/src/training/: active_learning.py  eval.py  metrics.py  tensorboard_utils.py
teach_me_rain/tests/: test_model_forward.py
tests/: test_active_learning.py  test_data_loading.py  test_metrics.py
